# suffix_trees

./: .flake8  README.md  pyproject.toml  report.md  requirements.txt
src/: ctrlf.py
src/b_tree/: __init__.py  b_tree.py
src/prefix_tree/: prefix_tree.py
src/suffix_tree/: __init__.py  suffix_tree.py  suffix_tree_basic.py  suffix_tree_ukonen.py  tmp.py
src/ui/: autocomplete.py  ui.py
