[tool.poetry]
name = "suffix_trees"
version = "0.1.0"
description = ""
authors = ["Petro Mozil <mozil.petryk@gmail.com>"]
license = "GPL v3.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pylint = "^2.17.4"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
include = ".pyi?$"
exclude = """
(
  .toml
  |.sh
  |.git
  |.ini
)
"""
