[project]
name = "suffix_trees"
version = "0.1.0"
description = ""
authors = [
    {name = "Petro Mozil", email = "mozil.petryk@gmail.com"},
]
dependencies = [
    "pyqt6>=6.5.0",
    "typing-extensions>=4.6.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPL v3.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "flake8>=6.0.0",
    "black>=23.3.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = ".pyi?$"
exclude = """
(
  .toml
  |.sh
  |.git
  |.ini
)
"""
